--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,12 @@ jobs:
           - "3.9"
           - "3.10"
           - "3.11"
+        exclude:
+          # 3.5 and 3.6 no longer available on ubuntu-latest
+          - os: ubuntu-latest
+            python-version: "3.5"
+          - os: ubuntu-latest
+            python-version: "3.6"
       fail-fast: false
     steps:
     - name: Checkout
