--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,7 @@ jobs:
           - macos-latest
           - windows-latest
         python-version:
-          - "3.5"
-          - "3.6"
+          # < 3.7 not widely availible on test images
           - "3.7"
           - "3.8"
           - "3.9"
@@ -30,16 +29,7 @@ jobs:
           - "3.12"
           - "3.13-dev"
         exclude:
-          # 3.5 and 3.6 no longer available on ubuntu-latest
-          - os: ubuntu-latest
-            python-version: "3.5"
-          - os: ubuntu-latest
-            python-version: "3.6"
-          # 3.5 - 3.7 no longer available on macos-latest
-          - os: macos-latest
-            python-version: "3.5"
-          - os: macos-latest
-            python-version: "3.6"
+          # 3.7 no longer available on macos-latest
           - os: macos-latest
             python-version: "3.7"
       fail-fast: false
